<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_library"
            android:title="@string/menu_library" />
        <item
            android:id="@+id/nav_list_book"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_list_book" />
        <item
            android:id="@+id/nav_notifications"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_contest"
            android:title="@string/menu_contest" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_auth"
            android:title="@string/menu_exit" />

    </group>
</menu>